--- a/styles/global.css
+++ b/styles/global.css
@@ -15,6 +15,15 @@
   --font-titles: "Rubik", serif;
   --font-body: system-ui, sans-serif; /* system-ui matches the user's system font */
 }
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 0%;
+  background-color: #1e1e2f; /* Dark background */
+  box-sizing: border-box; /* Include padding and borders in dimensions */
+}
 
 body {
   color: var(--color-primary);
