--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1,4 +1,13 @@
 /* General container styling */
+
+.main {
+  padding: 2rem;
+  text-align: center;
+  background: linear-gradient(180deg, #3d98a4 10%, #fffee4 100%);
+  max-width: 100%; /* Prevent horizontal overflow */
+  overflow-x: hidden; /* Hide any accidental overflow */
+}
+
 .container {
   font-family: "Rubik", sans-serif;
   background-color: #1e1e2f;
